Issue 17218: **Time chart and ptid report display issue with participant filter panel in IE  Issue 17224: **Participant List : Checkbox styling different between groups and categories  Issue 17250: **Participant List : 'Not in any group' out of order  Issue 17251: **Participant List : First click jump chooses incorrect action

--- a/study/webapp/study/DataViewsPanel.css
+++ b/study/webapp/study/DataViewsPanel.css
@@ -212,6 +212,10 @@ div.thumbnail svg
     padding-left: 6px;
 }
 
+.x4-reset .report-filter-panel .category-checked {
+    background-position: 0 -13px;
+}
+
 /* Part of Browser.js -- migrate if necessary */
 table.fb-details {
     margin: 5px 40px;
